index.html finished

--- a/index.html
+++ b/index.html
@@ -1,11 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <!-- Google Fonts -->
+    <title>AppLab</title>
+  </head>
+  <body>
+    <header class="header container">
+      <h1 class="header__logo heading__logo">AppLab</h1>
+      <div class="header__burger">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="#">home</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="#">features</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="#">pricing</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="#">blog</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="#">pages</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="#">contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main container">
+      <article class="main__article">
+        <h2 class="main__heading heading">promote your app with applab</h2>
+        <p class="main__text">
+          Get more users to promote your app with this template
+        </p>
+        <button class="main__button">get start now</button>
+      </article>
+      <section class="main__image">
+        <img src="images/phone.png" alt="smartphone" />
+      </section>
+    </main>
+    <section class="option container">
+      <h2 class="option__heading heading">Save your time using applab</h2>
+      <div class="option__icons">
+        <img
+          class="option__image"
+          src="./images/icons/2.svg"
+          alt="icon-circle"
+        />
+        <p class="option__text">Manage team in One Place</p>
+      </div>
+      <div class="option__icons">
+        <img class="option__image" src="./images/icons/1.svg" alt="icon-leaf" />
+        <p class="option__text">All-powerful Pointing has no control</p>
+      </div>
+      <div class="option__icons">
+        <img
+          class="option__image"
+          src="./images/icons/3.svg"
+          alt="icon-cloud"
+        />
+        <p class="option__text">Establish a solid online presence</p>
+      </div>
+    </section>
+    <section class="features container">
+      <div class="features__text-content">
+        <h2 class="features__heading heading">
+          Features that give you real feel
+        </h2>
+        <p class="features__text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia
+          expedita delectus aliquam unde eligendi, harum dolor odit suscipit
+          dicta consectetur.
+        </p>
+        <button class="features__button">download now</button>
+      </div>
+      <div class="features__image">
+        <img
+          class="features__image-image"
+          src="./images/draw.png"
+          alt="hand and smartphone"
+        />
+      </div>
+    </section>
+    <section class="background-review">
+      <div class="background-review__content container">
+        <h2 class="background-review__heading heading">
+          Review from our regular users
+        </h2>
+        <p class="background-review__text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error
+          doloribus eaque optio dolor harum quam quia nostrum excepturi! Vitae,
+          laborum?
+        </p>
+        <div class="background-review__review">
+          <div class="background-review__stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <p class="background-review__name">-robert smile</p>
+        </div>
+      </div>
+    </section>
+    <section class="pricing">
+      <div class="pricing__content container">
+        <h2 class="pricing__heading heading">Unlock full Power</h2>
+        <p class="pricing__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eius
+          sapiente soluta, ipsam ipsa amet repellendus voluptatum est libero
+          placeat?
+        </p>
+        <div class="pricing__cards">
+          <div class="pricing__card-basic">
+            <header class="pricing__header">
+              <h3 class="pricing__heading-small"></h3>
+              <p class="pricing__price"></p>
+            </header>
+            <ul class="pricing__list">
+              <li class="pricing__list-item"></li>
+              <li class="pricing__list-item"></li>
+              <li class="pricing__list-item"></li>
+              <li class="pricing__list-item"></li>
+              <li class="pricing__list-item"></li>
+            </ul>
+            <button class="pricing__button">get now</button>
+          </div>
+        </div>
+        <div class="pricing__cards">
+          <div class="pricing__card-basic">
+            <header class="pricing__header">
+              <h3 class="pricing__heading-small">Basic</h3>
+              <p class="pricing__price">$06</p>
+            </header>
+            <ul class="pricing__list">
+              <li class="pricing__list-item">one user</li>
+              <li class="pricing__list-item">1000 ui elements</li>
+              <li class="pricing__list-item">webmail support</li>
+              <li class="pricing__list-item">100gb cloud storage</li>
+            </ul>
+            <button class="pricing__button">get now</button>
+          </div>
+
+          <div class="pricing__card-team">
+            <header class="pricing__header">
+              <h3 class="pricing__heading-small">team</h3>
+              <p class="pricing__price">$06</p>
+            </header>
+            <ul class="pricing__list">
+              <li class="pricing__list-item">one user</li>
+              <li class="pricing__list-item">1000 ui elements</li>
+              <li class="pricing__list-item">webmail support</li>
+              <li class="pricing__list-item">100gb cloud storage</li>
+              <li class="pricing__list-item">unlimited users limit</li>
+            </ul>
+            <button class="pricing__button">get now</button>
+          </div>
+
+          <div class="pricing__card-business">
+            <header class="pricing__header">
+              <h3 class="pricing__heading-small">business</h3>
+              <p class="pricing__price">$06</p>
+            </header>
+            <ul class="pricing__list">
+              <li class="pricing__list-item">one user</li>
+              <li class="pricing__list-item">1000 ui elements</li>
+              <li class="pricing__list-item">webmail support</li>
+              <li class="pricing__list-item">100gb cloud storage</li>
+            </ul>
+            <button class="pricing__button">get now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="product">
+      <div class="product__content container">
+        <h2 class="product__heading heading">
+          get start from now and increase productivity
+        </h2>
+        <div class="product__icons">
+          <img
+            class="product__image"
+            src="./images/play.svg"
+            alt="google play"
+          />
+          <img class="product__image" src="./images/app.svg" alt="app store" />
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__content">
+        <section class="footer__first-section">
+          <h2 class="footer__logo heading__logo">AppLab</h2>
+          <p class="footer__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, exercitationem.
+          </p>
+          <div class="footer__social-icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </section>
+        <section class="footer__second-section">
+            <h2 class="footer__heading heading">services</h2>
+            <ul class="footer__list">
+                <li class="footer__list-item">team managment</li>
+                <li class="footer__list-item">collaboration</li>
+                <li class="footer__list-item">todo</li>
+                <li class="footer__list-item">events</li>
+            </ul>
+        </section>
+        <section class="footer__third-section">
+            <h2 class="footer__heading heading">useful links</h2>
+            <ul class="footer__list">
+                <li class="footer__list-item">pricing</li>
+                <li class="footer__list-item">features</li>
+                <li class="footer__list-item">blog</li>
+                <li class="footer__list-item">contact</li>
+            </ul>
+        </section>
+        <section class="footer__fourth-section">
+            <h2 class="footer__heading heading">downloads</h2>
+            <ul class="footer__list">
+                <li class="footer__list-item">download from apple store</li>
+                <li class="footer__list-item">download from play store</li>
+            </ul>
+        </section>
+      </div>
+      <div class="footer__rights">
+        <div class="footer__rights-text">
+            <p class="footer__copy">Copyright 	&copy;2020 All rights reserved | This template is made with <i class="fa-regular fa-heart"></i> by Colorlib</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
