main section on mobile finished

--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="#" />
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/global.css">
+    <link rel="stylesheet" media="(max-width: 600px)" href="./style/mobile.css">
     <title>AppLab</title>
   </head>
   <body>
     <header class="header container">
-      <h1 class="header__logo heading__logo">AppLab</h1>
+      <h1 class="header__logo">AppLab</h1>
       <div class="header__burger">
         <i class="fa-solid fa-bars"></i>
       </div>
@@ -207,7 +217,8 @@
         <section class="footer__first-section">
           <h2 class="footer__logo heading__logo">AppLab</h2>
           <p class="footer__text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, exercitationem.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio,
+            exercitationem.
           </p>
           <div class="footer__social-icons">
             <i class="fa-brands fa-facebook-f"></i>
@@ -216,34 +227,37 @@
           </div>
         </section>
         <section class="footer__second-section">
-            <h2 class="footer__heading heading">services</h2>
-            <ul class="footer__list">
-                <li class="footer__list-item">team managment</li>
-                <li class="footer__list-item">collaboration</li>
-                <li class="footer__list-item">todo</li>
-                <li class="footer__list-item">events</li>
-            </ul>
+          <h2 class="footer__heading heading">services</h2>
+          <ul class="footer__list">
+            <li class="footer__list-item">team managment</li>
+            <li class="footer__list-item">collaboration</li>
+            <li class="footer__list-item">todo</li>
+            <li class="footer__list-item">events</li>
+          </ul>
         </section>
         <section class="footer__third-section">
-            <h2 class="footer__heading heading">useful links</h2>
-            <ul class="footer__list">
-                <li class="footer__list-item">pricing</li>
-                <li class="footer__list-item">features</li>
-                <li class="footer__list-item">blog</li>
-                <li class="footer__list-item">contact</li>
-            </ul>
+          <h2 class="footer__heading heading">useful links</h2>
+          <ul class="footer__list">
+            <li class="footer__list-item">pricing</li>
+            <li class="footer__list-item">features</li>
+            <li class="footer__list-item">blog</li>
+            <li class="footer__list-item">contact</li>
+          </ul>
         </section>
         <section class="footer__fourth-section">
-            <h2 class="footer__heading heading">downloads</h2>
-            <ul class="footer__list">
-                <li class="footer__list-item">download from apple store</li>
-                <li class="footer__list-item">download from play store</li>
-            </ul>
+          <h2 class="footer__heading heading">downloads</h2>
+          <ul class="footer__list">
+            <li class="footer__list-item">download from apple store</li>
+            <li class="footer__list-item">download from play store</li>
+          </ul>
         </section>
       </div>
       <div class="footer__rights">
         <div class="footer__rights-text">
-            <p class="footer__copy">Copyright 	&copy;2020 All rights reserved | This template is made with <i class="fa-regular fa-heart"></i> by Colorlib</p>
+          <p class="footer__copy">
+            Copyright &copy;2020 All rights reserved | This template is made
+            with <i class="fa-regular fa-heart"></i> by Colorlib
+          </p>
         </div>
       </div>
     </footer>
