option section on mobile finished

--- a/index.html
+++ b/index.html
@@ -59,31 +59,37 @@
         <button class="main__button">get start now</button>
       </article>
       <section class="main__image">
-        <img src="images/phone.png" alt="smartphone" />
+        <img src="images/phone.png" alt="smartphone" class="main__image-phone" />
       </section>
     </main>
     <section class="option container">
       <h2 class="option__heading heading">Save your time using applab</h2>
-      <div class="option__icons">
+      <div class="option__content">
+      <div class="option__icons-circle option__icon">
         <img
           class="option__image"
           src="./images/icons/2.svg"
           alt="icon-circle"
         />
-        <p class="option__text">Manage team in One Place</p>
       </div>
-      <div class="option__icons">
+      <p class="option__text">Manage team in One Place</p>
+    </div>
+    <div class="option__content">
+      <div class="option__icons-leaf option__icon">
         <img class="option__image" src="./images/icons/1.svg" alt="icon-leaf" />
-        <p class="option__text">All-powerful Pointing has no control</p>
       </div>
-      <div class="option__icons">
+      <p class="option__text">All-powerful Pointing has no control</p>
+      </div>
+      <div class="option__content">
+      <div class="option__icons-cloud option__icon">
         <img
           class="option__image"
           src="./images/icons/3.svg"
           alt="icon-cloud"
         />
-        <p class="option__text">Establish a solid online presence</p>
       </div>
+      <p class="option__text">Establish a solid online presence</p>
+    </div>
     </section>
     <section class="features container">
       <div class="features__text-content">
@@ -128,13 +134,13 @@
       </div>
     </section>
     <section class="pricing">
+      <h2 class="pricing__heading heading">Unlock full Power</h2>
+      <p class="pricing__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eius
+        sapiente soluta, ipsam ipsa amet repellendus voluptatum est libero
+        placeat?
+      </p>
       <div class="pricing__content container">
-        <h2 class="pricing__heading heading">Unlock full Power</h2>
-        <p class="pricing__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eius
-          sapiente soluta, ipsam ipsa amet repellendus voluptatum est libero
-          placeat?
-        </p>
         <div class="pricing__cards">
           <div class="pricing__card-basic">
             <header class="pricing__header">
@@ -213,7 +219,7 @@
       </div>
     </section>
     <footer class="footer">
-      <div class="footer__content">
+      <div class="footer__content container">
         <section class="footer__first-section">
           <h2 class="footer__logo heading__logo">AppLab</h2>
           <p class="footer__text">
