features section on mobile finished

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="#" />
-    <link rel="stylesheet" href="./style/reset.css">
-    <link rel="stylesheet" href="./style/global.css">
-    <link rel="stylesheet" media="(max-width: 600px)" href="./style/mobile.css">
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/global.css" />
+    <link
+      rel="stylesheet"
+      media="(max-width: 600px)"
+      href="./style/mobile.css"
+    />
     <title>AppLab</title>
   </head>
   <body>
@@ -59,53 +63,62 @@
         <button class="main__button">get start now</button>
       </article>
       <section class="main__image">
-        <img src="images/phone.png" alt="smartphone" class="main__image-phone" />
+        <img
+          src="images/phone.png"
+          alt="smartphone"
+          class="main__image-phone"
+        />
       </section>
     </main>
     <section class="option container">
       <h2 class="option__heading heading">Save your time using applab</h2>
       <div class="option__content">
-      <div class="option__icons-circle option__icon">
-        <img
-          class="option__image"
-          src="./images/icons/2.svg"
-          alt="icon-circle"
-        />
-      </div>
-      <p class="option__text">Manage team in One Place</p>
-    </div>
-    <div class="option__content">
-      <div class="option__icons-leaf option__icon">
-        <img class="option__image" src="./images/icons/1.svg" alt="icon-leaf" />
-      </div>
-      <p class="option__text">All-powerful Pointing has no control</p>
+        <div class="option__icons-circle option__icon">
+          <img
+            class="option__image"
+            src="./images/icons/2.svg"
+            alt="icon-circle"
+          />
+        </div>
+        <p class="option__text">Manage team in One Place</p>
       </div>
       <div class="option__content">
-      <div class="option__icons-cloud option__icon">
-        <img
-          class="option__image"
-          src="./images/icons/3.svg"
-          alt="icon-cloud"
-        />
+        <div class="option__icons-leaf option__icon">
+          <img
+            class="option__image"
+            src="./images/icons/1.svg"
+            alt="icon-leaf"
+          />
+        </div>
+        <p class="option__text">All-powerful Pointing has no control</p>
       </div>
-      <p class="option__text">Establish a solid online presence</p>
-    </div>
+      <div class="option__content">
+        <div class="option__icons-cloud option__icon">
+          <img
+            class="option__image"
+            src="./images/icons/3.svg"
+            alt="icon-cloud"
+          />
+        </div>
+        <p class="option__text">Establish a solid online presence</p>
+      </div>
     </section>
     <section class="features container">
-      <div class="features__text-content">
+      <div class="features__content">
         <h2 class="features__heading heading">
           Features that give you real feel
         </h2>
         <p class="features__text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia
-          expedita delectus aliquam unde eligendi, harum dolor odit suscipit
-          dicta consectetur.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum beatae
+          sint eos nobis eligendi repudiandae porro. Doloremque architecto
+          laborum necessitatibus neque ipsam magni omnis est, ut illo mollitia
+          eaque maiores hic iure quam velit facere.
         </p>
         <button class="features__button">download now</button>
       </div>
-      <div class="features__image">
+      <div class="features__image-container">
         <img
-          class="features__image-image"
+          class="features__image"
           src="./images/draw.png"
           alt="hand and smartphone"
         />
@@ -133,14 +146,14 @@
         </div>
       </div>
     </section>
-    <section class="pricing">
+    <section class="pricing container">
       <h2 class="pricing__heading heading">Unlock full Power</h2>
       <p class="pricing__text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eius
         sapiente soluta, ipsam ipsa amet repellendus voluptatum est libero
         placeat?
       </p>
-      <div class="pricing__content container">
+      <div class="pricing__content">
         <div class="pricing__cards">
           <div class="pricing__card-basic">
             <header class="pricing__header">
