--- a/index.html
+++ b/index.html
@@ -149,29 +149,11 @@
     <section class="pricing container">
       <h2 class="pricing__heading heading">Unlock full Power</h2>
       <p class="pricing__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eius
-        sapiente soluta, ipsam ipsa amet repellendus voluptatum est libero
-        placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam error vitae modi.
       </p>
       <div class="pricing__content">
         <div class="pricing__cards">
-          <div class="pricing__card-basic">
-            <header class="pricing__header">
-              <h3 class="pricing__heading-small"></h3>
-              <p class="pricing__price"></p>
-            </header>
-            <ul class="pricing__list">
-              <li class="pricing__list-item"></li>
-              <li class="pricing__list-item"></li>
-              <li class="pricing__list-item"></li>
-              <li class="pricing__list-item"></li>
-              <li class="pricing__list-item"></li>
-            </ul>
-            <button class="pricing__button">get now</button>
-          </div>
-        </div>
-        <div class="pricing__cards">
-          <div class="pricing__card-basic">
+          <div class="pricing__basic card">
             <header class="pricing__header">
               <h3 class="pricing__heading-small">Basic</h3>
               <p class="pricing__price">$06</p>
@@ -185,7 +167,7 @@
             <button class="pricing__button">get now</button>
           </div>
 
-          <div class="pricing__card-team">
+          <div class="pricing__team card">
             <header class="pricing__header">
               <h3 class="pricing__heading-small">team</h3>
               <p class="pricing__price">$06</p>
@@ -199,8 +181,7 @@
             </ul>
             <button class="pricing__button">get now</button>
           </div>
-
-          <div class="pricing__card-business">
+          <div class="pricing__business card">
             <header class="pricing__header">
               <h3 class="pricing__heading-small">business</h3>
               <p class="pricing__price">$06</p>
