product section on mobile finished

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <li class="pricing__list-item">one user</li>
               <li class="pricing__list-item">1000 ui elements</li>
               <li class="pricing__list-item">webmail support</li>
-              <li class="pricing__list-item">100gb cloud storage</li>
+              <li class="pricing__list-item">100GB cloud storage</li>
             </ul>
             <button class="pricing__button">get now</button>
           </div>
@@ -176,7 +176,7 @@
               <li class="pricing__list-item">one user</li>
               <li class="pricing__list-item">1000 ui elements</li>
               <li class="pricing__list-item">webmail support</li>
-              <li class="pricing__list-item">100gb cloud storage</li>
+              <li class="pricing__list-item">100GB cloud storage</li>
               <li class="pricing__list-item">unlimited users limit</li>
             </ul>
             <button class="pricing__button">get now</button>
@@ -190,7 +190,7 @@
               <li class="pricing__list-item">one user</li>
               <li class="pricing__list-item">1000 ui elements</li>
               <li class="pricing__list-item">webmail support</li>
-              <li class="pricing__list-item">100gb cloud storage</li>
+              <li class="pricing__list-item">100GB cloud storage</li>
             </ul>
             <button class="pricing__button">get now</button>
           </div>
@@ -198,9 +198,9 @@
       </div>
     </section>
     <section class="product">
-      <div class="product__content container">
+      <div class="product__content">
         <h2 class="product__heading heading">
-          get start from now and increase productivity
+          Get start from now and increase productivity
         </h2>
         <div class="product__icons">
           <img
