--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="./style/global.css" />
     <link
       rel="stylesheet"
-      media="(max-width: 600px)"
-      href="./style/mobile.css"
-    />
+      href="./style/mobile.css"/>
     <title>AppLab</title>
   </head>
   <body>
@@ -149,7 +147,8 @@
     <section class="pricing container">
       <h2 class="pricing__heading heading">Unlock full Power</h2>
       <p class="pricing__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam error vitae modi.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
+        error vitae modi.
       </p>
       <div class="pricing__content">
         <div class="pricing__cards">
@@ -215,15 +214,21 @@
     <footer class="footer">
       <div class="footer__content container">
         <section class="footer__first-section">
-          <h2 class="footer__logo heading__logo">AppLab</h2>
+          <h2 class="footer__logo">AppLab</h2>
           <p class="footer__text">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio,
             exercitationem.
           </p>
-          <div class="footer__social-icons">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
+          <div class="footer__social">
+            <div class="footer__icon">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <div class="footer__icon">
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="footer__icon">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
           </div>
         </section>
         <section class="footer__second-section">
@@ -256,7 +261,7 @@
         <div class="footer__rights-text">
           <p class="footer__copy">
             Copyright &copy;2020 All rights reserved | This template is made
-            with <i class="fa-regular fa-heart"></i> by Colorlib
+            with <i class="fa-regular fa-heart"></i> by <span class="footer__author">Colorlib</span></p>
           </p>
         </div>
       </div>
