add mobile nav - mobile layout finished

--- a/index.html
+++ b/index.html
@@ -26,28 +26,31 @@
   <body>
     <header class="header container">
       <h1 class="header__logo">AppLab</h1>
-      <div class="header__burger">
+      <!-- <div class="header__burger"> -->
+        <label for="menu" class="header__burger-btn">
         <i class="fa-solid fa-bars"></i>
-      </div>
+      </label>
+      <input type="checkbox" id="menu" class="header__input">  
+      <!-- </div> -->
       <nav class="header__nav">
         <ul class="nav__list">
           <li class="nav__list-item">
-            <a class="nav__item-link" href="#">home</a>
+            <a class="nav__link-item" href="#">home</a>
           </li>
           <li class="nav__list-item">
-            <a class="nav__item-link" href="#">features</a>
+            <a class="nav__link-item" href="#">features</a>
           </li>
           <li class="nav__list-item">
-            <a class="nav__item-link" href="#">pricing</a>
+            <a class="nav__link-item" href="#">pricing</a>
           </li>
           <li class="nav__list-item">
-            <a class="nav__item-link" href="#">blog</a>
+            <a class="nav__link-item" href="#">blog</a>
           </li>
           <li class="nav__list-item">
-            <a class="nav__item-link" href="#">pages</a>
+            <a class="nav__link-item" href="#">pages</a>
           </li>
           <li class="nav__list-item">
-            <a class="nav__item-link" href="#">contact</a>
+            <a class="nav__link-item" href="#">contact</a>
           </li>
         </ul>
       </nav>
