--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <title>AppLab</title>
     <link rel="icon" type="image/x-icon" href="#" />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./style/global.css" />
-    <link
-      rel="stylesheet"
-      href="./style/mobile.css"/>
-    <title>AppLab</title>
+    <link rel="stylesheet" href="./style/mobile.css"/>
+    <link rel="stylesheet" media="(min-width: 900px)" href="./style/tablet.css">
   </head>
   <body>
-    <header class="header container">
+    <header class="header ">
+      <div class="header__content container">
       <h1 class="header__logo">AppLab</h1>
-      <!-- <div class="header__burger"> -->
         <label for="menu" class="header__burger-btn">
         <i class="fa-solid fa-bars"></i>
       </label>
       <input type="checkbox" id="menu" class="header__input">  
-      <!-- </div> -->
       <nav class="header__nav">
         <ul class="nav__list">
           <li class="nav__list-item">
@@ -54,9 +52,11 @@
           </li>
         </ul>
       </nav>
+    </div>
     </header>
-    <main class="main container">
-      <article class="main__article">
+    <main class="main">
+      <div class="main__content container">
+      <article class="main__article container">
         <h2 class="main__heading heading">promote your app with applab</h2>
         <p class="main__text">
           Get more users to promote your app with this template
@@ -70,9 +70,11 @@
           class="main__image-phone"
         />
       </section>
+    </div>
     </main>
     <section class="option container">
-      <h2 class="option__heading heading">Save your time using applab</h2>
+      <h2 class="option__heading heading">Save your time to using applab</h2>
+      <div class="option__wrapper">
       <div class="option__content">
         <div class="option__icons-circle option__icon">
           <img
@@ -103,6 +105,7 @@
         </div>
         <p class="option__text">Establish a solid online presence</p>
       </div>
+    </div>
     </section>
     <section class="features container">
       <div class="features__content">
@@ -124,6 +127,7 @@
           alt="hand and smartphone"
         />
       </div>
+    </div>
     </section>
     <section class="background-review">
       <div class="background-review__content container">
