background-review section on tablet finished

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       </div>
     </div>
     </section>
-    <section class="background-review">
-      <div class="background-review__content container">
+    <section class="background-review container">
+      <div class="background-review__content">
         <h2 class="background-review__heading heading">
           Review from our regular users
         </h2>
