pricing section on tablet finished

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="main__content container">
       <article class="main__article container">
         <h2 class="main__heading heading">promote your app with applab</h2>
-        <p class="main__text">
+        <p class="main__text text">
           Get more users to promote your app with this template
         </p>
         <button class="main__button">get start now</button>
@@ -112,7 +112,7 @@
         <h2 class="features__heading heading">
           Features that give you real feel
         </h2>
-        <p class="features__text">
+        <p class="features__text text">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum beatae
           sint eos nobis eligendi repudiandae porro. Doloremque architecto
           laborum necessitatibus neque ipsam magni omnis est, ut illo mollitia
@@ -153,11 +153,10 @@
     </section>
     <section class="pricing container">
       <h2 class="pricing__heading heading">Unlock full Power</h2>
-      <p class="pricing__text">
+      <p class="pricing__text text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
         error vitae modi.
       </p>
-      <div class="pricing__content">
         <div class="pricing__cards">
           <div class="pricing__basic card">
             <header class="pricing__header">
@@ -172,7 +171,6 @@
             </ul>
             <button class="pricing__button">get now</button>
           </div>
-
           <div class="pricing__team card">
             <header class="pricing__header">
               <h3 class="pricing__heading-small">team</h3>
@@ -201,7 +199,6 @@
             <button class="pricing__button">get now</button>
           </div>
         </div>
-      </div>
     </section>
     <section class="product">
       <div class="product__content">
