add dropdown to nav

--- a/index.html
+++ b/index.html
@@ -43,15 +43,32 @@
           </li>
           <li class="nav__list-item">
             <a class="nav__link-item" href="#">blog</a>
+            <ul class="nav__dropdown">
+              <li class="nav__list-item">
+                <a class="nav__link-item" href="#">blog 1</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__link-item" href="#">blog 2</a>
+              </li>
+            </ul>
           </li>
           <li class="nav__list-item">
             <a class="nav__link-item" href="#">pages</a>
+            <ul class="nav__dropdown">
+              <li class="nav__list-item">
+                <a class="nav__link-item" href="#">pages 1</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__link-item" href="#">pages 2</a>
+              </li>
+            </ul>
           </li>
           <li class="nav__list-item">
             <a class="nav__link-item" href="#">contact</a>
           </li>
         </ul>
       </nav>
+      <button class="header__button">Download</button>
     </div>
     </header>
     <main class="main">
