--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="./style/global.css" />
     <link rel="stylesheet" href="./style/mobile.css"/>
     <link rel="stylesheet" media="(min-width: 900px)" href="./style/tablet.css">
+    <link rel="stylesheet" media="(min-width: 1200px)" href="./style/desktop.css">
   </head>
   <body>
-    <header class="header ">
-      <div class="header__content container">
+    <header class="header">
       <h1 class="header__logo">AppLab</h1>
         <label for="menu" class="header__burger-btn">
         <i class="fa-solid fa-bars"></i>
@@ -41,8 +41,8 @@
           <li class="nav__list-item">
             <a class="nav__link-item" href="#">pricing</a>
           </li>
-          <li class="nav__list-item">
-            <a class="nav__link-item" href="#">blog</a>
+          <li class="nav__list-item nav__dropdown-item">
+            <a class="nav__link-item" href="#">blog <span class="nav__dropdown-arrow">></span></a>
             <ul class="nav__dropdown">
               <li class="nav__list-item">
                 <a class="nav__link-item" href="#">blog 1</a>
@@ -52,8 +52,9 @@
               </li>
             </ul>
           </li>
-          <li class="nav__list-item">
-            <a class="nav__link-item" href="#">pages</a>
+          <li class="nav__list-item  nav__dropdown-item">
+            <a class="nav__link-item" href="#">pages <span class="nav__dropdown-arrow">></span>
+            </a>
             <ul class="nav__dropdown">
               <li class="nav__list-item">
                 <a class="nav__link-item" href="#">pages 1</a>
@@ -68,12 +69,11 @@
           </li>
         </ul>
       </nav>
-      <button class="header__button">Download</button>
-    </div>
+      <button class="header__btn">download</button>
     </header>
     <main class="main">
       <div class="main__content container">
-      <article class="main__article container">
+      <article class="main__article">
         <h2 class="main__heading heading">promote your app with applab</h2>
         <p class="main__text text">
           Get more users to promote your app with this template
