--- a/index.html
+++ b/index.html
@@ -19,18 +19,26 @@
     <link rel="icon" type="image/x-icon" href="#" />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./style/global.css" />
-    <link rel="stylesheet" href="./style/mobile.css"/>
-    <link rel="stylesheet" media="(min-width: 900px)" href="./style/tablet.css">
-    <link rel="stylesheet" media="(min-width: 1200px)" href="./style/desktop.css">
+    <link rel="stylesheet" href="./style/mobile.css" />
+    <link
+      rel="stylesheet"
+      media="(min-width: 900px)"
+      href="./style/tablet.css"
+    />
+    <link
+      rel="stylesheet"
+      media="(min-width: 1200px)"
+      href="./style/desktop.css"
+    />
   </head>
   <body>
     <header class="header">
       <h1 class="header__logo">AppLab</h1>
-        <label for="menu" class="header__burger-btn">
+      <label for="menu" class="header__burger-btn">
         <i class="fa-solid fa-bars"></i>
       </label>
-      <input type="checkbox" id="menu" class="header__input">  
-      <nav class="header__nav">
+      <input type="checkbox" id="menu" class="header__input" />
+      <nav class="header__nav nav">
         <ul class="nav__list">
           <li class="nav__list-item">
             <a class="nav__link-item" href="#">home</a>
@@ -42,7 +50,9 @@
             <a class="nav__link-item" href="#">pricing</a>
           </li>
           <li class="nav__list-item nav__dropdown-item">
-            <a class="nav__link-item" href="#">blog <span class="nav__dropdown-arrow">></span></a>
+            <a class="nav__link-item" href="#"
+              >blog <span class="nav__dropdown-arrow">></span></a
+            >
             <ul class="nav__dropdown">
               <li class="nav__list-item">
                 <a class="nav__link-item" href="#">blog 1</a>
@@ -52,8 +62,9 @@
               </li>
             </ul>
           </li>
-          <li class="nav__list-item  nav__dropdown-item">
-            <a class="nav__link-item" href="#">pages <span class="nav__dropdown-arrow">></span>
+          <li class="nav__list-item nav__dropdown-item">
+            <a class="nav__link-item" href="#"
+              >pages <span class="nav__dropdown-arrow">></span>
             </a>
             <ul class="nav__dropdown">
               <li class="nav__list-item">
@@ -73,56 +84,56 @@
     </header>
     <main class="main">
       <div class="main__content container">
-      <article class="main__article">
-        <h2 class="main__heading heading">promote your app with applab</h2>
-        <p class="main__text text">
-          Get more users to promote your app with this template
-        </p>
-        <button class="main__button">get start now</button>
-      </article>
-      <section class="main__image">
-        <img
-          src="images/phone.png"
-          alt="smartphone"
-          class="main__image-phone"
-        />
-      </section>
-    </div>
+        <article class="main__article">
+          <h2 class="main__heading heading">promote your app with applab</h2>
+          <p class="main__text text">
+            Get more users to promote your app with this template
+          </p>
+          <button class="main__button">get start now</button>
+        </article>
+        <section class="main__image">
+          <img
+            src="images/phone.png"
+            alt="smartphone"
+            class="main__image-phone"
+          />
+        </section>
+      </div>
     </main>
     <section class="option container">
       <h2 class="option__heading heading">Save your time to using applab</h2>
       <div class="option__wrapper">
-      <div class="option__content">
-        <div class="option__icons-circle option__icon">
-          <img
-            class="option__image"
-            src="./images/icons/2.svg"
-            alt="icon-circle"
-          />
+        <div class="option__content">
+          <div class="option__icons-circle option__icon">
+            <img
+              class="option__image"
+              src="./images/icons/2.svg"
+              alt="icon-circle"
+            />
+          </div>
+          <p class="option__text">Manage team in One Place</p>
         </div>
-        <p class="option__text">Manage team in One Place</p>
-      </div>
-      <div class="option__content">
-        <div class="option__icons-leaf option__icon">
-          <img
-            class="option__image"
-            src="./images/icons/1.svg"
-            alt="icon-leaf"
-          />
+        <div class="option__content">
+          <div class="option__icons-leaf option__icon">
+            <img
+              class="option__image"
+              src="./images/icons/1.svg"
+              alt="icon-leaf"
+            />
+          </div>
+          <p class="option__text">All-powerful Pointing has no control</p>
         </div>
-        <p class="option__text">All-powerful Pointing has no control</p>
-      </div>
-      <div class="option__content">
-        <div class="option__icons-cloud option__icon">
-          <img
-            class="option__image"
-            src="./images/icons/3.svg"
-            alt="icon-cloud"
-          />
+        <div class="option__content">
+          <div class="option__icons-cloud option__icon">
+            <img
+              class="option__image"
+              src="./images/icons/3.svg"
+              alt="icon-cloud"
+            />
+          </div>
+          <p class="option__text">Establish a solid online presence</p>
         </div>
-        <p class="option__text">Establish a solid online presence</p>
       </div>
-    </div>
     </section>
     <section class="features container">
       <div class="features__content">
@@ -144,7 +155,6 @@
           alt="hand and smartphone"
         />
       </div>
-    </div>
     </section>
     <section class="background-review container">
       <div class="background-review__content">
@@ -174,48 +184,48 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
         error vitae modi.
       </p>
-        <div class="pricing__cards">
-          <div class="pricing__basic card">
-            <header class="pricing__header">
-              <h3 class="pricing__heading-small">Basic</h3>
-              <p class="pricing__price">$06</p>
-            </header>
-            <ul class="pricing__list">
-              <li class="pricing__list-item">one user</li>
-              <li class="pricing__list-item">1000 ui elements</li>
-              <li class="pricing__list-item">webmail support</li>
-              <li class="pricing__list-item">100GB cloud storage</li>
-            </ul>
-            <button class="pricing__button">get now</button>
-          </div>
-          <div class="pricing__team card">
-            <header class="pricing__header">
-              <h3 class="pricing__heading-small">team</h3>
-              <p class="pricing__price">$06</p>
-            </header>
-            <ul class="pricing__list">
-              <li class="pricing__list-item">one user</li>
-              <li class="pricing__list-item">1000 ui elements</li>
-              <li class="pricing__list-item">webmail support</li>
-              <li class="pricing__list-item">100GB cloud storage</li>
-              <li class="pricing__list-item">unlimited users limit</li>
-            </ul>
-            <button class="pricing__button">get now</button>
-          </div>
-          <div class="pricing__business card">
-            <header class="pricing__header">
-              <h3 class="pricing__heading-small">business</h3>
-              <p class="pricing__price">$06</p>
-            </header>
-            <ul class="pricing__list">
-              <li class="pricing__list-item">one user</li>
-              <li class="pricing__list-item">1000 ui elements</li>
-              <li class="pricing__list-item">webmail support</li>
-              <li class="pricing__list-item">100GB cloud storage</li>
-            </ul>
-            <button class="pricing__button">get now</button>
-          </div>
+      <div class="pricing__cards">
+        <div class="pricing__basic card">
+          <header class="pricing__header">
+            <h3 class="pricing__heading-small">Basic</h3>
+            <p class="pricing__price">$06</p>
+          </header>
+          <ul class="pricing__list">
+            <li class="pricing__list-item">one user</li>
+            <li class="pricing__list-item">1000 ui elements</li>
+            <li class="pricing__list-item">webmail support</li>
+            <li class="pricing__list-item">100GB cloud storage</li>
+          </ul>
+          <button class="pricing__button">get now</button>
         </div>
+        <div class="pricing__team card">
+          <header class="pricing__header">
+            <h3 class="pricing__heading-small">team</h3>
+            <p class="pricing__price">$06</p>
+          </header>
+          <ul class="pricing__list">
+            <li class="pricing__list-item">one user</li>
+            <li class="pricing__list-item">1000 ui elements</li>
+            <li class="pricing__list-item">webmail support</li>
+            <li class="pricing__list-item">100GB cloud storage</li>
+            <li class="pricing__list-item">unlimited users limit</li>
+          </ul>
+          <button class="pricing__button">get now</button>
+        </div>
+        <div class="pricing__business card">
+          <header class="pricing__header">
+            <h3 class="pricing__heading-small">business</h3>
+            <p class="pricing__price">$06</p>
+          </header>
+          <ul class="pricing__list">
+            <li class="pricing__list-item">one user</li>
+            <li class="pricing__list-item">1000 ui elements</li>
+            <li class="pricing__list-item">webmail support</li>
+            <li class="pricing__list-item">100GB cloud storage</li>
+          </ul>
+          <button class="pricing__button">get now</button>
+        </div>
+      </div>
     </section>
     <section class="product">
       <div class="product__content">
@@ -282,7 +292,8 @@
         <div class="footer__rights-text">
           <p class="footer__copy">
             Copyright &copy;2020 All rights reserved | This template is made
-            with <i class="fa-regular fa-heart"></i> by <span class="footer__author">Colorlib</span></p>
+            with <i class="fa-regular fa-heart"></i> by
+            <span class="footer__author">Colorlib</span>
           </p>
         </div>
       </div>
