switch from div to ul > li in option section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     </main>
     <section class="option container">
       <h2 class="option__heading heading">Save your time to using applab</h2>
-      <div class="option__wrapper">
-        <div class="option__content">
+      <ul class="option__wrapper">
+        <li class="option__content">
           <div class="option__icons-circle option__icon">
             <img
               class="option__image"
@@ -112,8 +112,8 @@
             />
           </div>
           <p class="option__text">Manage team in One Place</p>
-        </div>
-        <div class="option__content">
+        </li>
+        <li class="option__content">
           <div class="option__icons-leaf option__icon">
             <img
               class="option__image"
@@ -122,8 +122,8 @@
             />
           </div>
           <p class="option__text">All-powerful Pointing has no control</p>
-        </div>
-        <div class="option__content">
+        </li>
+        <li class="option__content">
           <div class="option__icons-cloud option__icon">
             <img
               class="option__image"
@@ -132,8 +132,8 @@
             />
           </div>
           <p class="option__text">Establish a solid online presence</p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
     <section class="features container">
       <div class="features__content">
