switch from div to ul > li in pricing cards

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam
         error vitae modi.
       </p>
-      <div class="pricing__cards">
-        <div class="pricing__basic card">
+      <ul class="pricing__cards">
+        <li class="pricing__basic card">
           <header class="pricing__header">
             <h3 class="pricing__heading-small">Basic</h3>
             <p class="pricing__price">$06</p>
@@ -197,8 +197,8 @@
             <li class="pricing__list-item">100GB cloud storage</li>
           </ul>
           <button class="pricing__button">get now</button>
-        </div>
-        <div class="pricing__team card">
+        </li>
+        <li class="pricing__team card">
           <header class="pricing__header">
             <h3 class="pricing__heading-small">team</h3>
             <p class="pricing__price">$06</p>
@@ -211,8 +211,8 @@
             <li class="pricing__list-item">unlimited users limit</li>
           </ul>
           <button class="pricing__button">get now</button>
-        </div>
-        <div class="pricing__business card">
+        </li>
+        <li class="pricing__business card">
           <header class="pricing__header">
             <h3 class="pricing__heading-small">business</h3>
             <p class="pricing__price">$06</p>
@@ -224,8 +224,8 @@
             <li class="pricing__list-item">100GB cloud storage</li>
           </ul>
           <button class="pricing__button">get now</button>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
     <section class="product">
       <div class="product__content">
