change the class of pricing headers

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </p>
       <ul class="pricing__cards">
         <li class="pricing__basic card">
-          <header class="pricing__header">
+          <header class="pricing__header--basic">
             <h3 class="pricing__heading-small">Basic</h3>
             <p class="pricing__price">$06</p>
           </header>
@@ -199,7 +199,7 @@
           <button class="pricing__button">get now</button>
         </li>
         <li class="pricing__team card">
-          <header class="pricing__header">
+          <header class="pricing__header--team">
             <h3 class="pricing__heading-small">team</h3>
             <p class="pricing__price">$06</p>
           </header>
@@ -213,7 +213,7 @@
           <button class="pricing__button">get now</button>
         </li>
         <li class="pricing__business card">
-          <header class="pricing__header">
+          <header class="pricing__header--business">
             <h3 class="pricing__heading-small">business</h3>
             <p class="pricing__price">$06</p>
           </header>
